adjust change avatar

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="container">
       <div id="profile">
         <img
-          src="./assets/avatar.png"
+          src="./assets/avatar-dark-mode.png"
           alt="foto de leonardo lavigne, sério, de barba rala e em fundo branco."
         />
         <p>Leonardo Lavigne</p>
