adjust attribute 'alt' from avatar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div id="profile">
         <img
           src="./assets/avatar-dark-mode.png"
-          alt="foto de leonardo lavigne, sério, de barba rala e em fundo branco."
+          alt="avatar em fundo branco."
         />
         <p>Leonardo Lavigne</p>
       </div>
